# lldb-debug-mcp

./: .containerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  claude-container.sh  go.mod  go.sum  planning-config.json  rust-toolchain.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.plans/Brainstorm/: lldb-mcp-architecture.md
.plans/Designs/LLDBDebugMCP/: README.md
.plans/Designs/RustPort/: README.md
.plans/Plans/LLDBDebugMCP/: 01-Foundation.md  02-Session-Lifecycle.md  03-Breakpoints-Execution.md  04-Inspection.md  05-Advanced-Testing.md  README.md
.plans/Plans/RustPort/: 01-Foundation.md  02-DAP-Client.md  03-LLDB-Backend.md  04-Session.md  05-Tools-Server.md  06-Integration-Parity.md  README.md
.plans/Specs/RustPort/: README.md
cmd/lldb-debug-mcp/: main.go
crates/dap-client/: Cargo.toml
crates/dap-client/src/: client.rs  error.rs  lib.rs  read_loop.rs  stop_waiter.rs  wire.rs
crates/dap-client/tests/: client.rs  framing.rs  read_loop.rs  stop_waiter.rs
crates/dap-client/tests/common/: mod.rs
crates/debug-mcp/: Cargo.toml
crates/debug-mcp/src/: main.rs
crates/debugger-core/: Cargo.toml
crates/debugger-core/src/: backend.rs  error.rs  event.rs  lib.rs  types.rs
crates/debugger-core/src/tests/: mod.rs  serde_roundtrip.rs
crates/debugger-core/tests/: object_safety.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: harness.rs  lib.rs  stdio.rs
crates/lldb-backend/: Cargo.toml
crates/lldb-backend/src/: args.rs  backend.rs  body.rs  detect.rs  factory.rs  lib.rs  requests.rs  subprocess.rs
crates/lldb-backend/src/tests/: detect.rs  event_stream.rs  mod.rs
crates/lldb-backend/tests/: factory.rs  handshake.rs  ops.rs  subprocess.rs
crates/lldb-backend/tests/common/: mod.rs
crates/mcp-session/: Cargo.toml
crates/mcp-session/src/: breakpoint.rs  lib.rs  manager.rs  output_buffer.rs  pump.rs  state.rs
crates/mcp-session/src/tests/: breakpoints.rs  mod.rs  output_buffer.rs  pump.rs  state.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools/src/: args.rs  errors.rs  flatten.rs  format.rs  frame.rs  lib.rs  response.rs  schema.rs  server.rs
crates/mcp-tools/src/handlers/: breakpoints.rs  execution.rs  inspection.rs  lifecycle.rs  memory.rs  mod.rs  output.rs  run_command.rs
crates/mcp-tools/src/tests/: args.rs  fake.rs  flatten.rs  format.rs  mod.rs  response.rs
crates/mcp-tools/src/tests/handlers/: breakpoints.rs  errors.rs  execution.rs  guards.rs  inspection.rs  lifecycle.rs  memory.rs  mod.rs  schema.rs  support.rs
crates/mcp-tools/tests/: integration_differential.rs  integration_scenarios.rs  integration_smoke.rs
internal/dap/: client.go  client_test.go  stopwaiter.go  stopwaiter_test.go  types.go  types_test.go
internal/detect/: detect.go  detect_test.go  subprocess.go  subprocess_test.go
internal/session/: session.go  session_test.go
internal/tools/: attach.go  attach_test.go  breakpoints.go  breakpoints_test.go  disconnect.go  disconnect_test.go  execution.go  execution_test.go  inspection.go  inspection_test.go  integration_test.go  launch.go  memory.go  memory_test.go  output.go  output_test.go  run_command.go  run_command_test.go  set_function_breakpoint_test.go  status.go  status_test.go  tools.go  variables_util.go  variables_util_test.go
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: debug-mcp-nudge.sh  debug-mcp-session-reset.sh
plugin/skills/debug-mcp-breakpoints/: SKILL.md
plugin/skills/debug-mcp-debugging/: SKILL.md
plugin/skills/debug-mcp-execution/: SKILL.md
plugin/skills/debug-mcp-inspection/: SKILL.md
plugin/skills/debug-mcp-lowlevel/: SKILL.md
scripts/: containers.sh
testdata/: .gitignore  Makefile  crash.c  loop.c  multithread.c  simple.c  structs.c
tools/claude/: Containerfile  managed-mcp.json  managed-settings.json
