[package]
name = "lldb-backend"
description = "lldb-dap backend: LldbBackend + LldbFactory, launch/attach handshake, detect/spawn, repl-mode. Built on dap-client."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
debugger-core.workspace = true
dap-client.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
base64 = "0.22"

[features]
# Opt-in live smoke test against a real lldb-dap + testdata fixtures (analog of the
# Go `//go:build integration` tag). Off by default so `cargo test` stays hermetic.
live = []

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
